--- a/src/NewJFrame.form
+++ b/src/NewJFrame.form
@@ -37,10 +37,10 @@
           <text value="Delete"/>
         </properties>
       </component>
-      <component id="6b14e" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="4f265" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
         <constraints>
-          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties/>
